deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgmancer
  labels:
    app: bgmancer
spec:
  selector:
    app: bgmancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
